[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.10.2"
chrono = { version = "0.4.40", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "postgres" ] }
tokio = "1.44.1"
